--- a/index3.html
+++ b/index3.html
@@ -276,7 +276,7 @@
     <span class="title-sub">Page and Music Sensory Stimulation</span>
    <ul class="survey-desc">
       <li>Thank you for participating in this questionnaire!</li>
-      <li>This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping.</li>
+      <li>This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users' emotional engagement and satisfaction with online shopping.</li>
       <li>This page is for academic research purposes only, and all data will be kept strictly confidential.</li>
       <li>Please carefully browse the page and listen to the music, then answer the questionnaire based on your true experience.</li>
     </ul>
