--- a/index3.html
+++ b/index3.html
@@ -283,7 +283,7 @@
     <div class="product-list">
       <div class="product-card">
         <div class="product-img">
-          <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
+          <img src="<a href="https://imgse.com/i/pVMhmjO"><img src="https://s21.ax1x.com/2025/07/08/pVMhmjO.jpg" alt="pVMhmjO.jpg" border="0" /></a>" alt="Product 1" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Misty Hills Tote Bag</div>
@@ -294,7 +294,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
+          <img src="<a href="https://imgse.com/i/pVMhZ36"><img src="https://s21.ax1x.com/2025/07/08/pVMhZ36.jpg" alt="pVMhZ36.jpg" border="0" /></a>" alt="Product 2" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Swan Reflection Glasses Cloth</div>
@@ -305,7 +305,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
+          <img src="<a href="https://imgse.com/i/pVMhegK"><img src="https://s21.ax1x.com/2025/07/08/pVMhegK.jpg" alt="pVMhegK.jpg" border="0" /></a>" alt="Product 3" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Lighthouse Drawstring Pouch</div>
@@ -316,7 +316,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
+          <img src="<a href="https://imgse.com/i/pVMhuuD"><img src="https://s21.ax1x.com/2025/07/08/pVMhuuD.jpg" alt="pVMhuuD.jpg" border="0" /></a>" alt="Product 4" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Ripple Light Floor Mat</div>
@@ -327,7 +327,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
+          <img src="<a href="https://imgse.com/i/pVMhKDe"><img src="https://s21.ax1x.com/2025/07/08/pVMhKDe.jpg" alt="pVMhKDe.jpg" border="0" /></a>" alt="Product 5" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Pasture Memory Glass Frame</div>
@@ -338,7 +338,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
+          <img src="<a href="https://imgse.com/i/pVMhMHH"><img src="https://s21.ax1x.com/2025/07/08/pVMhMHH.jpg" alt="pVMhMHH.jpg" border="0" /></a>" alt="Product 6" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Nature Moments Bookmark</div>
@@ -349,7 +349,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
+          <img src="<a href="https://imgse.com/i/pVMhlEd"><img src="https://s21.ax1x.com/2025/07/08/pVMhlEd.jpg" alt="pVMhlEd.jpg" border="0" /></a>" alt="Product 7" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Landscape Journey Commemorative Coin</div>
@@ -360,7 +360,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
+          <img src="[url=https://imgse.com/i/pVMh1UA][img]https://s21.ax1x.com/2025/07/08/pVMh1UA.jpg[/img][/url]" alt="Product 8" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Verdant Pastures Blanket</div>
