--- a/index3.html
+++ b/index3.html
@@ -113,18 +113,20 @@
     .product-card:hover {
       box-shadow: 0 6px 24px #1a347a24;
     }
+
+    /* ---- 只修改下面两段，使商品图片效果与 index6.html 完全一致 ---- */
     .product-img {
       width: 100%;
       max-width: 320px;
       height: auto;
-      background: #e8eef8;
+      background: #fff4ea;
       border-radius: 12px;
-      border: 1.2px solid #b8cbe9;
+      border: 1.2px solid #e9c769;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 1.05rem;
-      color: #3b568f;
+      color: #b67d2f;
       font-family: 'Montserrat', Arial, sans-serif;
       margin: 0 auto 10px auto;
       overflow: hidden;
@@ -135,6 +137,8 @@
       display: block;
       border-radius: 12px;
     }
+    /* ---- 只修改到这里，其余保持原样 ---- */
+
     .product-info {
       width: 100%;
       display: flex;
