--- a/index6.html
+++ b/index6.html
@@ -279,6 +279,7 @@
       <li>本页面为模拟在线购物网页，配有背景音乐，旨在研究不同感官元素对用户情感参与及满意度的影响。</li>
       <li>本页面仅用于学术研究，所有数据均严格保密。</li>
       <li>请您认真浏览页面并聆听背景音乐，根据真实体验作答问卷。</li>
+      <li>备注：页面中商品框内的所有信息、图片与按钮仅用于展示网页效果，无实际含义或指向，请勿对其内容进行解读。</li>
     </ul>
     <div class="product-list">
       <div class="product-card">
