--- a/index4.html
+++ b/index4.html
@@ -275,8 +275,9 @@
   <li>Thank you for participating in this questionnaire!</li>
   <li>This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping.</li>
   <li>This page is for academic research purposes only, and all data will be kept strictly confidential.</li>
+  <li>Note: All information, images and buttons in the product box on this page are only used for displaying the effect of the page, and have no practical meaning. </li>
   <li>Please carefully browse the page and listen to the music, then answer the questionnaire based on your true experience.</li>
-</ul>
+    </ul>
     <div class="product-list">
       <div class="product-card">
         <div class="product-img">
